@@ -12,6 +12,10 @@ What's New in Python 3.1 alpha 0
 Core and Builtins
 -----------------
 
+- Issue #1717: Remove builtin cmp() function, C-API functions
+  PyObject_Cmp and PyObject_Compare, and the support function
+  Py_CmpToRich.
+
 - Issue #4707: round(x, n) now returns an integer if x is an integer.
   Previously it returned a float.
 
